src/test/ui/transmutability/assume_validity.stderr
error[E0277]: the trait bound `u16: BikeshedIntrinsicFromAny<BoolThenPadding>` is not satisfied
  --> $DIR/assume_validity.rs:14:51
   |
LL |     assert_is_transmutable_any::<BoolThenPadding, u16>();
   |                                                   ^^^ the trait `BikeshedIntrinsicFromAny<BoolThenPadding>` is not implemented for `u16`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/assume_validity.rs:42:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
